--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "http://beluas.github.io/FullStack-TechGoods",
+	"homepage": "https://tech-goods.herokuapp.com/",
 	"name": "client",
 	"version": "0.1.0",
 	"private": true,
